Fixed impact article width to stretch across whole screen on mobile

--- a/assets/less/structure/header.less
+++ b/assets/less/structure/header.less
@@ -100,6 +100,11 @@ header#main {
       margin-left: -1.5em;
     }
   }
+
+  article { 
+    .column(10);
+    .push(1);
+  }
   
   @media screen and (min-width: 400px) {
     
@@ -166,6 +171,10 @@ header#main {
     figure {
       display: inline;
     }
+    
+    article { 
+      .column(8);
+    }
   }
 
   @media screen and (min-width:24em) {
@@ -186,10 +195,6 @@ header#main {
   }
 
 
-  article { 
-    .column(8);
-    .push(1);
-  }
   .article-links {
     position: absolute;
     bottom: 1em;
